RESOLVED FIXED65091
Validation message bubble position is incorrect if the containing block has paddings.
https://bugs.webkit.org/show_bug.cgi?id=65091
Summary Validation message bubble position is incorrect if the containing block has p...
Kent Tamura
Reported 2011-07-24 19:33:00 PDT
This is a follow-up of [Bug 65018].
Attachments
Patch (3.06 KB, patch)
2011-07-24 19:36 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-07-24 19:36:10 PDT
WebKit Review Bot
Comment 2 2011-07-24 20:37:08 PDT
Comment on attachment 101846 [details] Patch Clearing flags on attachment: 101846 Committed r91654: <http://trac.webkit.org/changeset/91654>
WebKit Review Bot
Comment 3 2011-07-24 20:37:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.