Validation message bubble position is incorrect if the containing block has paddings. https://bugs.webkit.org/show_bug.cgi?id=65091

Reviewed by Hajime Morita.

Source/WebCore:

* html/ValidationMessage.cpp:
(WebCore::adjustBubblePosition):
We don't need to subtract paddings because the origin of
position:aboslute is inside borders and outside of the padding.

LayoutTests:

* fast/forms/validation-message-in-relative-body.html: Update the test to cover a padding case.


Canonical link: https://commits.webkit.org/80832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91654 268f45cc-cd09-0410-ab3c-d52691b4dbfc